Env atualizado para docker

--- a/discovery.yml
+++ b/discovery.yml
@@ -2,7 +2,7 @@
 eureka:
  client:
   service-url:
-   defaultZone: http://crmeureka:1111/eureka/
+   defaultZone: http://discovery:1111/eureka/
   register-with-eureka: false
   fetch-registry: false
 
