--- a/demo.yml
+++ b/demo.yml
@@ -5,7 +5,7 @@ server:
   
 spring:
  datasource:
-  url: jdbc:mysql://localhost:3306/DEMO
+  url: jdbc:mysql:mysql:3306/DEMO
   username: root
   password: teste
   driverClassName: com.mysql.jdbc.Driver
