--- a/demo.yml
+++ b/demo.yml
@@ -5,7 +5,7 @@ server:
   
 spring:
  datasource:
-  url: jdbc:mysql:mysql:3306/DEMO
+  url: jdbc:mysql:docker_mysql_1:3306/DEMO
   username: root
   password: teste
   driverClassName: com.mysql.jdbc.Driver
@@ -18,4 +18,4 @@ spring:
  eureka:
   client:
     service-url:
-      defaultZone: discovery:1111/eureka/
+      defaultZone: http://docker_discovery_1:1111/eureka/
